--- a/package.json
+++ b/package.json
@@ -1,20 +1,39 @@
 {
-  "name": "jquery-plugin",
-  "version": "0.0.0-ignored",
+  "name": "jquery.existence",
+  "title": "jQuery Existence",
+  "version": "0.1.1",
+  "description": "Simple semantic checks if elements exist. Supports Twitter Bower with `bower install jquery.existence`",
+  "homepage": "https://github.com/seriema/jquery.existence",
+  "bugs": "https://github.com/seriema/jquery.existence/issues",
+  "keywords": ["exists", "missing", "semantic"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seriema/jquery.existence.git"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/seriema/jquery.existence/blob/master/LICENSE-MIT"
+    }
+  ],
+  "author": {
+    "name": "John-Philip Johansson",
+    "email": "seriema@gmail.com",
+    "url": "http://johansson.jp"
+  },
   "engines": {
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt qunit"
+    "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-qunit": "~0.1.1",
-    "grunt-contrib-concat": "~0.1.2",
-    "grunt-contrib-uglify": "~0.1.1",
-    "grunt-contrib-watch": "~0.2.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.7"
+    "grunt-contrib-jshint": ">=0.6.0",
+    "grunt-contrib-qunit": ">=0.2.2",
+    "grunt-contrib-concat": ">=0.3.0",
+    "grunt-contrib-uglify": ">=0.2.2",
+    "grunt-contrib-watch": ">=0.4.4",
+    "grunt-contrib-clean": ">=0.4.1",
+    "grunt": ">=0.4.1"
   }
 }
